--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# Project exclude paths
-.gradle
-.idea
+# Created by .ignore support plugin (hsz.mobi)
 ### Java template
 # Compiled class file
 *.class
@@ -26,4 +24,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-!/.idea/
+.idea/
